# palmier-pro-win

./: .gitignore  CLAUDE.md  Cargo.toml  LOG.md
_bmad/: config.toml  (+1 more)
crates/palmier-agent/: Cargo.toml
crates/palmier-agent/src/: anthropic_client.rs  availability.rs  client.rs  event.rs  image_encoder.rs  lib.rs  loop_run.rs  mention_context.rs  model.rs  request.rs  session_store.rs  sse.rs
crates/palmier-agent/tests/: anthropic_http.rs
crates/palmier-agent/tests/fixtures/: request_body_golden.json  tool_use_stream.sse
crates/palmier-auth/: Cargo.toml
crates/palmier-auth/src/: account.rs  config.rs  convex.rs  error.rs  keyring.rs  lib.rs  token.rs
crates/palmier-edit/: Cargo.toml
crates/palmier-edit/src/: adapter.rs  captions.rs  drag.rs  geometry.rs  lib.rs  orchestration.rs  overwrite.rs  placement.rs  ripple.rs  rounding.rs  snap.rs  split.rs
crates/palmier-edit/src/captions/: tests.rs
crates/palmier-edit/src/drag/: tests.rs
crates/palmier-edit/src/orchestration/: tests.rs
crates/palmier-engine/: Cargo.toml
crates/palmier-engine/benches/: composition_build.rs  frame_sample.rs  render_frame.rs
crates/palmier-engine/src/: lib.rs
crates/palmier-engine/src/audio/: envelope.rs  mixer.rs  mod.rs  player.rs  retime.rs  volume_scale.rs
crates/palmier-engine/src/composition/: build.rs  mat3.rs  mod.rs  sampler.rs  text.rs  types.rs
crates/palmier-engine/src/compositor/: composite.wgsl  gpu.rs  mod.rs  pixels.rs  provider.rs  quad.rs  text.wgsl  text_pass.rs  texture_cache.rs
crates/palmier-engine/src/preview/: mod.rs  render_frame.rs  tab.rs
crates/palmier-engine/src/transport/: clock.rs  mod.rs  transport.rs
crates/palmier-engine/tests/: compositor_smoke.rs  golden_frame.rs  sm2_perf.rs  text_smoke.rs
crates/palmier-engine/tests/support/: golden.rs
crates/palmier-export/: .gitattributes  Cargo.toml
crates/palmier-export/src/: bundle.rs  lib.rs  resolver.rs  xmeml.rs  xml.rs
crates/palmier-export/src/video/: encoder.rs  mod.rs  render.rs  spec.rs
crates/palmier-export/tests/: export_pause.rs  golden_xmeml.rs  video_export.rs
crates/palmier-export/tests/fixtures/: golden_xmeml_keyframes.xml  golden_xmeml_minimal.xml  golden_xmeml_text.xml
crates/palmier-gen/: Cargo.toml
crates/palmier-gen/src/: catalog.rs  convex_ws.rs  cost.rs  gating.rs  http_poll.rs  lib.rs  params.rs  preferences.rs  service.rs  transport.rs  upload.rs  validate.rs
crates/palmier-gen/tests/: live_convex.rs
crates/palmier-history/: Cargo.toml
crates/palmier-history/src/: action.rs  lib.rs  stack.rs  tests.rs
crates/palmier-mcp/: Cargo.toml
crates/palmier-mcp/src/: jsonrpc.rs  lib.rs  server.rs  validators.rs  well_known.rs
crates/palmier-mcp/tests/: integration.rs
crates/palmier-media/: Cargo.toml
crates/palmier-media/src/: audio_decode.rs  clip.rs  import.rs  lib.rs  metadata.rs  waveform.rs
crates/palmier-media/src/cache/: dir.rs  gates.rs  key.rs  mod.rs
crates/palmier-media/tests/: decode_audio_pcm.rs  decode_real_clip.rs
crates/palmier-model/: Cargo.toml
crates/palmier-model/src/: animatable_property.rs  clip.rs  clip_type.rs  edit_types.rs  genlog.rs  interpolation.rs  keyframe.rs  lib.rs  manifest.rs  media_asset.rs  media_folders.rs  serde_date.rs  text_style.rs  timeline.rs  transform.rs  volume.rs
crates/palmier-model/tests/: date_roundtrip.rs
crates/palmier-project/: Cargo.toml
crates/palmier-project/src/: bundle.rs  dialog.rs  document.rs  lib.rs  media_library.rs  registry.rs  resolver.rs  samples.rs
crates/palmier-project/tests/: bundle_round_trip.rs  round_trip.rs
crates/palmier-prompt/: .gitattributes  Cargo.toml
crates/palmier-prompt/src/: agent_instructions.txt  lib.rs
crates/palmier-search/: Cargo.toml
crates/palmier-search/src/: coordinator.rs  embedder.rs  export_pause.rs  indexer.rs  lib.rs  manifest.rs  model_loader.rs  preprocess.rs  sampler.rs  store.rs  tokenize.rs  transcript_search.rs  visual_search.rs
crates/palmier-search/tests/: embedder_pipeline.rs
crates/palmier-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
crates/palmier-tauri/capabilities/: default.json
crates/palmier-tauri/src/: agent.rs  audio_build.rs  boot.rs  commands.rs  export.rs  main.rs  media.rs  menu.rs  preview.rs  preview_audio.rs  preview_render.rs  project.rs  settings.rs  update.rs  waveform_cache.rs  window.rs
crates/palmier-telemetry/: Cargo.toml
crates/palmier-telemetry/src/: config.rs  crash.rs  lib.rs  logging.rs  paths.rs  pref.rs  sentry_init.rs
crates/palmier-telemetry/tests/: sentry_lifecycle.rs
crates/palmier-text/: Cargo.toml
crates/palmier-text/src/: caption.rs  layout.rs  lib.rs  preroll.rs  registry.rs  style.rs
crates/palmier-tools/: Cargo.toml
crates/palmier-tools/src/: caption_transcribe.rs  clips.rs  dispatch.rs  editor.rs  executor.rs  generate.rs  inspect.rs  json_round.rs  lib.rs  library.rs  properties.rs  read.rs  resources.rs  result.rs  schema.rs  search.rs  short_id.rs  texts.rs  tracks.rs  transcript.rs  undo.rs  validate.rs
crates/palmier-tools/tests/: caption_tools.rs  edit_tools.rs  executor.rs  library_text_inspect.rs  search_media.rs  transcript_cut.rs
crates/palmier-transcribe/: Cargo.toml
crates/palmier-transcribe/src/: cache.rs  engine.rs  error.rs  lib.rs  locale.rs  model.rs  profanity.rs
crates/palmier-update/: Cargo.toml  build.rs  palmier-update.manifest
crates/palmier-update/src/: lib.rs
spikes/ffmpeg-probe/: Cargo.toml
spikes/ffmpeg-probe/src/: main.rs
spikes/s1-wgpu-webview/: Cargo.toml  FINDINGS.md
spikes/s1-wgpu-webview/src/: lib.rs  present.rs  readback.rs  render.rs
spikes/s2-convex-ws/: Cargo.toml  FINDINGS.md
spikes/s2-convex-ws/src/: lib.rs
spikes/s2-wry-integration/: Cargo.toml  FINDINGS.md
spikes/s2-wry-integration/src/: lib.rs
spikes/s3-siglip2/: Cargo.toml  FINDINGS.md
spikes/s3-siglip2/src/: embed.rs  lib.rs  manifest.rs  onnx.rs  preprocess.rs  rank.rs  store.rs  tokenize.rs
spikes/s3-siglip2/tests/: pipeline.rs
spikes/whisper-probe/: .gitignore  Cargo.toml
spikes/whisper-probe/src/: main.rs
(+225 files in other folders)
