# Palmier-Pro-Windows — Cargo workspace
#
# Skeleton scaffold (E1-S1 / E2-S1). This defines the 17 core crates from
# FOUNDATION §4 plus the `palmier-tauri` binary. Crates are stubs: each carries
# a doc comment naming its responsibility and a trivial placeholder so the whole
# workspace COMPILES fast. Features and feature work are added per-story.
#
# IMPORTANT — heavy deps come per-story, NOT here:
#   ffmpeg-next / wgpu / whisper-rs / candle / ort / cpal / symphonia / rubato /
#   rmcp / axum / reqwest / tauri runtime ... are intentionally absent so the
#   skeleton builds in seconds. Each owning epic/story wires its own crate's
#   external dependencies when it lands. See docs/FOUNDATION.md §2 (locked stack).
#
# Builds on this box MUST go through scripts/with-msvc.ps1 (vswhere can't see the
# VS install): `pwsh -File scripts/with-msvc.ps1 cargo build`.

[workspace]
resolver = "2"
members = [
    "crates/palmier-model",
    "crates/palmier-project",
    "crates/palmier-media",
    "crates/palmier-engine",
    "crates/palmier-text",
    "crates/palmier-edit",
    "crates/palmier-history",
    "crates/palmier-export",
    "crates/palmier-transcribe",
    "crates/palmier-search",
    "crates/palmier-gen",
    "crates/palmier-agent",
    "crates/palmier-mcp",
    "crates/palmier-prompt",
    "crates/palmier-tools",
    "crates/palmier-auth",
    "crates/palmier-update",
    "crates/palmier-telemetry",
    "crates/palmier-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "GPL-3.0-only"
publish = false

# Shared dependency versions. Kept minimal for the skeleton; crates opt in.
# Heavy/per-story deps are deliberately NOT declared here.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
# Date codec for the per-field serde Date seam (E2-S8 / Spike S-1b). `macros`
# enables the `datetime!` / `format_description!` compile-time helpers; `parsing`
# + `formatting` enable ISO-8601 (de)serialization. `serde` left off — the codec
# is hand-written per-field (`#[serde(with = …)]`), not derive-based.
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
# Platform config/data dirs — registry at `%APPDATA%\PalmierProWin\` (Windows) /
# `~/.config/palmier-pro/` (Linux). Consumed by `palmier-project` (E2-S11/S12).
dirs = "5"
# Recycle Bin / XDG trash for `ProjectRegistry::delete` (E2-S11). Feature-gated in
# the crate so unit tests never hit the real trash.
trash = "5"
# UUID-pattern matching for the MCP tool dispatcher's ShortId layer (E7-S1) — the
# `uuidRegex` literal port that rewrites known UUIDs in tool result text to their
# short prefix. Owned by `palmier-tools`; declared here to pin the version.
regex = "1"
# SHA-256 for the transcript-cache content key (E10-S4, FOUNDATION §6.9 / ruling #19:
# `sha256(file_content)+model+language`). Pure-Rust; pinned here for the workspace.
sha2 = "0.10"
# Async runtime primitives. E10-S4 uses `tokio::sync::OnceCell` for the tokio-friendly
# `TranscriptCache.shared` singleton (reference `actor … .shared`). Heavy runtime
# features come per-story; the cache only needs `sync`.
tokio = { version = "1", features = ["sync"] }
