[package]
name = "palmier-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Shared tool dispatcher (Epic 7) — wired by the loop in E8-S4. Kept as a dep now
# so the crate's module boundary to palmier-tools is established; this scaffold
# does not call execute() yet.
palmier-tools = { path = "../palmier-tools" }
# Value types: ClipType (mentions) + the per-field ISO-8601 Date codec for
# ChatSession::updated_at (serde_date::iso8601, E2-S8).
palmier-model = { path = "../palmier-model" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
# Typed client errors (reference AnthropicClientError / PalmierClientError).
thiserror = "2"
# Stream abstraction for the AgentClient trait. `futures-core` gives the
# dyn-compatible `BoxStream` return type; `futures-util` gives the iter-stream
# the MockAgentClient stub replays + the StreamExt combinators the SSE driver uses.
futures-core = "0.3"
futures-util = "0.3"
# BYOK transport (E8-S3): async reqwest, rustls so no system OpenSSL is required on
# Win/Linux (parity with palmier-auth's convex transport). `stream` enables
# `Response::bytes_stream()` for the SSE byte stream.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
# Async runtime: the stream driver uses `tokio::select!` for per-chunk cancellation.
# `rt-multi-thread` so the client works under the app's multi-thread runtime.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
# Cancellation token (per-chunk cancel + drop-cancellation).
tokio-util = { version = "0.7", features = ["rt"] }
# `async_stream::stream!` builds the BoxStream that drives the SSE parser.
async-stream = "0.3"
# `#[async_trait]` for the dyn-compatible ByteSource transport seam.
async-trait = "0.1"

[dev-dependencies]
# Local mock HTTP server for the end-to-end reqwest transport tests
# (tests/anthropic_http.rs) — serves a recorded SSE body / 4xx with zero
# live-network calls. The live-API test is `#[ignore]`d behind ANTHROPIC_API_KEY.
wiremock = "0.6"
serde_json = { workspace = true }
