[package]
name = "palmier-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
palmier-model = { path = "../palmier-model" }

# Heavy deps (reqwest, tokio, convex client) come per-story — see FOUNDATION §2 / §6.11.
