[package]
name = "palmier-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
palmier-tools = { path = "../palmier-tools" }

# Heavy deps (rmcp, axum, tokio) come per-story — see FOUNDATION §2 / §6.14.
