[package]
name = "palmier-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
# R-7 mitigation hook (OFF by default): mix a content prefix into the cache key
# so coarse Windows-FS mtime granularity can't false-hit. Enabling it changes
# the key shape (invalidates existing entries) — leave off for parity until R-7
# is observed. See cache::key::cache_key_with_content_prefix.
content-prefix-fallback = []

[dependencies]
palmier-model = { path = "../palmier-model" }

# Cache infrastructure (E4-S2): SHA256 cache key, OS cache-dir resolution,
# semaphore concurrency gates + in-flight dedup. Kept light — no ffmpeg/symphonia
# yet (those land with the thumbnail/waveform pipelines in E4-S3/S4/S5).
sha2 = "0.10"
dirs = "6"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
tempfile = "3"
