[package]
name = "palmier-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
# R-7 mitigation hook (OFF by default): mix a content prefix into the cache key
# so coarse Windows-FS mtime granularity can't false-hit. Enabling it changes
# the key shape (invalidates existing entries) — leave off for parity until R-7
# is observed. See cache::key::cache_key_with_content_prefix.
content-prefix-fallback = []

[dependencies]
palmier-model = { path = "../palmier-model" }
# E4-S7 import orchestration batches the whole multi-item import into ONE undo
# step via `palmier-project::MediaLibraryHistory` (which wraps palmier-history).
# No dependency cycle: palmier-project does NOT depend on palmier-media.
palmier-project = { path = "../palmier-project" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Cache infrastructure (E4-S2): SHA256 cache key, OS cache-dir resolution,
# semaphore concurrency gates + in-flight dedup. Kept light — no ffmpeg/symphonia
# yet (those land with the thumbnail/waveform pipelines in E4-S3/S4/S5).
sha2 = "0.10"
dirs = "6"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }

# Asset metadata loader (E4-S1) + image-thumbnail pipeline (E4-S5).
#   * image — `image` crate for dimensions + EXIF-aware thumbnail resize.
#   * audio — `symphonia` (pure Rust) for duration / sample-rate / channels and
#     the E4-S4 waveform decode (PCM downsample).
#   * video (mp4/mov/m4v) — `mp4` crate (pure-Rust ISO-BMFF parser) for the fast
#     duration/dimensions/display-matrix/audio-track probe; `ffmpeg-next` covers
#     frame extraction (E4-S3) and the VFR fps backfill the `mp4` crate can't do.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "webp"] }
kamadak-exif = "0.6"
symphonia = { version = "0.6", default-features = false, features = ["mp3", "wav", "aac", "isomp4", "pcm", "adpcm"] }
mp4 = "0.14"

# Video decode/thumbnail pipeline (E4-S3) + the E4-S1 `// TODO(ffmpeg)` fps
# backfill. The Windows FFmpeg toolchain is now provisioned (FFmpeg 7.1 LGPL
# shared at C:\ffmpeg + libclang for bindgen) and auto-sourced by
# scripts/with-msvc.ps1, so `ffmpeg-next` 7.1 builds & links through the wrapper
# (docs/windows-harness-notes.md). Used for: sprite-sheet frame extraction
# (seek + scale to 120×68) and avg/r_frame_rate reads for VFR/edit-list
# containers the pure-Rust `mp4` parser reports as 0/garbage.
ffmpeg-next = "7"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
tempfile = "3"
