[package]
name = "palmier-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
# E2-S8 Date codec seam (Apple reference-epoch doubles + ISO-8601).
time.workspace = true
