[package]
name = "palmier-project"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
palmier-model = { path = "../palmier-model" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
